@@ -736,6 +736,17 @@ Text lexers
     :Mimetypes: None
 
 
+`TracWikiLexer`
+
+    For Trac (and MoinMoin) Wiki markup.
+
+    *New in Pygments 0.7.*
+
+    :Aliases: ``trac-wiki``
+    :Filename patterns: None
+    :Mimetypes: ``text/x-trac-wiki``
+
+
 Iterating over all lexers
 =========================
 
