@@ -5,6 +5,8 @@ Version 0.7
 -----------
 (codename to be selected, released Feb XX, 2007)
 
+- Added Trac Wiki markup lexer, thanks to Tim Hatch.
+
 - Added Python traceback lexer, thanks to Tim Hatch.
 
 - Added "fruity" style, another dark background originally vim-based theme.
